# MCP_DB

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  HARDCODE_FIX_PLAN.md  README.md  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml
.claude/: settings.json
docs/: CLAUDE.md  MCP_QUICK_START.md  README.md  architecture.md  installation.md  performance.md  quick-start.md  schema-system.md  testing.md
docs/development/: README.md  v4.2-architecture-refactoring.md
schemas_config/: README.md  SCHEMA_CONFIG_GUIDE.md  ai_enhancement.json  global_patterns.json  tables_list.json
schemas_config/examples/: README.md  sample_table.json
scripts/: cleanup.sh
src/: __init__.py  http_server.py  main.py  server.py
src/api/: __init__.py  middleware.py  routes.py
src/core/: __init__.py  config.py  dependencies.py  error_handling.py  exceptions.py
src/database/: __init__.py  async_connectors.py  async_manager.py  connectors.py  manager.py
src/database/schema/: __init__.py  cache.py  formatter.py  introspector.py  static_loader.py
src/protocol/: __init__.py  base_server.py  sse_server.py  stdio_server.py
src/tools/: __init__.py  base.py  definitions.py  handlers.py  registry.py  validators.py
src/tools/handlers/: __init__.py  cache_handler.py  connection_handler.py  dependency_handler.py  export_handler.py  query_handler.py  schema_handler.py  syntax_handler.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_async_manager.py  test_schema_cache.py  test_validators.py
